--- a/front-end/FX.css
+++ b/front-end/FX.css
@@ -6,9 +6,22 @@
    }
    
    td, th {
-     border: 1px solid #dddddd;
+     border: 1px solid #18191A;
+     background-color : #FFFEF7;
      text-align: left;
      padding: 8px;
    }
+
+   #base , #quote {
+    text-transform: uppercase;
+   }
    
+   #Value , #transaction{
+     
+    padding: 5px;
+   }
   
+
+   /* body {
+    background-color : #C6DEFF;
+  } */
