Update the CSS and the add in the gettransaction.js

--- a/front-end/FX.css
+++ b/front-end/FX.css
@@ -22,6 +22,10 @@
    }
   
 
-   /* body {
-    background-color : #C6DEFF;
-  } */
+   body {
+    
+  width: 700px ;
+  margin-left: auto ;
+  margin-right: auto ;
+  background-color: beige;
+  } 
